2004-09-08  callum  <callum@spooky-possum.org>

	* gataxx.c (restore_state): Fix a goof with colouring the squares
	which are valid moves.

	* help/C/gataxx.xml: Gataxx -> Ataxx and updates for 2.8.

2004-05-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gataxx.c:
	* properties.c: Fix compiler warnings.

2004-05-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (gataxx_SOURCES): Add ai.h.

2004-04-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Free the file list when the properties dialog is
	destroyed.

2004-03-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ai.*:
	* appbar.*:
	* gataxx.*:
	* gtkgridboard.*:
	* menus.*:
	* properties.*:
	* Makefile.am: Import Sjoerd Langkemper's rewrite. This also
	includes several changes to bring the new gataxx into line with
	the old one. The important ones are: White now starts, the timer
	has gone, session management should save the state of the game.
	
	* ataxx.c:
	* ataxx.h: Removed, replaced by ai.[ch].

	* For_Iagno: Added to the repository: a list of what needs to be
	done for the Iagno merge.

	* Makefile.am: 
	* sounds/*:
	* gataxx.soundlist.in:	
	* TODO: Remvoe the sound infrastructure, it seems to have never
	been used and it is identical to what iagno has. I'll add sound
	support when I merge in iagno. Also remove TODO since it is out of
	date.

2004-03-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: A simple adaption of jrb's iagno patch for fixing
	bug #136236.

2004-02-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gataxx.xml: Update version to 2.6.

2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gataxx.c (about_cb): translator_credits ->
	translator-credits.

2003-10-29  Callum McKenzie  <callum@localhost.localdomain>

	* Makefile.am: Removed *_DISABLE_DEPRECATED.

2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Change the way gconf files are